# brick

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
src/brick/: __init__.py  azr.py  configuration.py  constants.py  data.py  level.py  nodata.py  output.py  parameter.py  utility.py
tests/12Cpg/: 12C+p.azr  12C+p_1.azr  README.md  chain.h5  model.py  test_norm_factors.py  test_output.py  tests.py  tutorial.ipynb
tests/12Cpg/output/: AZUREOut_aa=1_R=2.out  chiSquared.out  param.par  param.sav  parameters.out
