[metadata]
name = brick-james
version = 0.2.3
author = Daniel Odell
author_email = dodell@ohio.edu
description = A Python interface to AZURE2 that makes it easy to sample R-matrix parameters.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/odell/brick
project_urls =
    Bug Tracker = https://github.com/odell/brick/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Unix

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
